# chip8-emulator

./: .clangd  .gitignore  .golangci.yaml  CMakeLists.txt  README.md  chip8.go  chipV8.go  go.mod  main.cpp  main.go  makefile
src/: chip8.cpp  chip8.h  glad.c  opengl.cpp  opengl.h
